--- a/api/config.json
+++ b/api/config.json
@@ -8,11 +8,11 @@
                 "settings": {
                     "vnext": [
                         {
-                            "address": "69.84.182.1",
-                            "port": 443,
+                            "address": "151.101.123.89",
+                            "port": 80,
                             "users": [
                                 {
-                                    "id": "71ed6628-5870-4d19-8a52-f2a3ba3d4898",
+                                    "id": "568279ce-dd78-4f33-9e5c-64b18c5505db",
                                     "security": "auto",
                                     "level": 8,
                                     "encryption": "none",
@@ -24,26 +24,48 @@
                 },
                 "streamSettings": {
                     "network": "ws",
-                    "security": "tls",
+                    "security": "none",
                     "wsSettings": {
-                        "path": "\/youlingkaishi",
+                        "path": "\/olem\/ws?ed=2560",
                         "headers": {
-                            "Host": "vbbc.ylks2024.us.kg"
+                            "Host": "foffmelo.com"
                         }
-                    },
-                    "tlsSettings": {
-                        "allowInsecure": true,
-                        "serverName": "vbbc.ylks2024.us.kg",
-                        "show": false,
-                        "publicKey": "",
-                        "shortId": "",
-                        "spiderX": ""
                     }
                 },
                 "mux": {
                     "enabled": false,
                     "concurrency": 8
                 }
+            }
+        ]
+    },
+    "Colombia": {
+        "cc": "CO",
+        "configs": [
+            {
+                "tag": "proxy",
+                "protocol": "shadowsocks",
+                "settings": {
+                    "servers": [
+                        {
+                            "address": "172.236.19.190",
+                            "method": "aes-128-gcm",
+                            "ota": false,
+                            "password": "S_kG5IVobozVy77FTaXYzg",
+                            "port": 1080,
+                            "level": 8
+                        }
+                    ]
+                },
+                "streamSettings": {
+                    "network": "tcp",
+                    "security": ""
+                },
+                "mux": {
+                    "enabled": false,
+                    "concurrency": 8
+                },
+                "remarks": "SS-TCP-NAGB-172.236.19.190:1080"
             }
         ]
     },
@@ -56,11 +78,11 @@
                 "settings": {
                     "vnext": [
                         {
-                            "address": "69.84.182.1",
-                            "port": 443,
+                            "address": "151.101.123.89",
+                            "port": 80,
                             "users": [
                                 {
-                                    "id": "71ed6628-5870-4d19-8a52-f2a3ba3d4898",
+                                    "id": "568279ce-dd78-4f33-9e5c-64b18c5505db",
                                     "security": "auto",
                                     "level": 8,
                                     "encryption": "none",
@@ -72,20 +94,138 @@
                 },
                 "streamSettings": {
                     "network": "ws",
-                    "security": "tls",
+                    "security": "none",
                     "wsSettings": {
-                        "path": "\/youlingkaishi",
+                        "path": "\/olem\/ws?ed=2560",
                         "headers": {
-                            "Host": "vbbc.ylks2024.us.kg"
+                            "Host": "foffmelo.com"
                         }
-                    },
+                    }
+                },
+                "mux": {
+                    "enabled": false,
+                    "concurrency": 8
+                }
+            }
+        ]
+    },
+    "Israel": {
+        "cc": "IL",
+        "configs": [
+            {
+                "tag": "proxy",
+                "protocol": "shadowsocks",
+                "settings": {
+                    "servers": [
+                        {
+                            "address": "85.208.108.60",
+                            "method": "aes-256-gcm",
+                            "ota": false,
+                            "password": "pKEW8JPByTVTLtM",
+                            "port": 443,
+                            "level": 8
+                        }
+                    ]
+                },
+                "streamSettings": {
+                    "network": "tcp",
+                    "security": ""
+                },
+                "mux": {
+                    "enabled": false,
+                    "concurrency": 8
+                },
+                "remarks": "SS-TCP-NAJP-85.208.108.60:443"
+            }
+        ]
+    },
+    "United Kingdom": {
+        "cc": "GB",
+        "configs": [
+            {
+                "tag": "proxy",
+                "protocol": "shadowsocks",
+                "settings": {
+                    "servers": [
+                        {
+                            "address": "62.60.152.158",
+                            "method": "chacha20-ietf-poly1305",
+                            "ota": false,
+                            "password": "y6fgyC28hscmdwqXj2v0Fm",
+                            "port": 37618,
+                            "level": 8
+                        }
+                    ]
+                },
+                "streamSettings": {
+                    "network": "tcp",
+                    "security": ""
+                },
+                "mux": {
+                    "enabled": false,
+                    "concurrency": 8
+                },
+                "remarks": "SS-TCP-NASE-62.60.152.158:37618"
+            }
+        ]
+    },
+    "United States": {
+        "cc": "US",
+        "configs": [
+            {
+                "tag": "proxy",
+                "protocol": "shadowsocks",
+                "settings": {
+                    "servers": [
+                        {
+                            "address": "195.16.74.107",
+                            "method": "chacha20-ietf-poly1305",
+                            "ota": false,
+                            "password": "demlKZL24gZf9X8eykFdyr",
+                            "port": 35570,
+                            "level": 8
+                        }
+                    ]
+                },
+                "streamSettings": {
+                    "network": "tcp",
+                    "security": ""
+                },
+                "mux": {
+                    "enabled": false,
+                    "concurrency": 8
+                },
+                "remarks": "SS-TCP-NATR-195.16.74.107:35570"
+            },
+            {
+                "tag": "proxy",
+                "protocol": "trojan",
+                "settings": {
+                    "servers": [
+                        {
+                            "address": "103.116.7.103",
+                            "method": "chacha20-poly1305",
+                            "ota": false,
+                            "password": "Aimer",
+                            "port": 2083,
+                            "level": 8,
+                            "flow": ""
+                        }
+                    ]
+                },
+                "streamSettings": {
+                    "network": "tcp",
+                    "security": "tls",
                     "tlsSettings": {
                         "allowInsecure": true,
-                        "serverName": "vbbc.ylks2024.us.kg",
-                        "show": false,
-                        "publicKey": "",
-                        "shortId": "",
-                        "spiderX": ""
+                        "serverName": "epccy.ambercc.filegear-sg.me",
+                        "fingerprint": "randomized",
+                        "show": false
+                    },
+                    "tcpSetting": {
+                        "header": {
+                            "type": "none"
+                        }
                     }
                 },
                 "mux": {
